--- a/ventas-backend/ventas/pom.xml
+++ b/ventas-backend/ventas/pom.xml
@@ -42,8 +42,7 @@
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
+:::wq			</plugin>
 		</plugins>
 	</build>
 
