--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,4 +15,4 @@ jobs:
         java-version: 1.8
     - name: Compile with Maven
       run: 
-        mvn compile --file pom.xml -X
+        mvn compile
