--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,6 +14,6 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
       - name: Find Maven
-        run: mvn -f /home/runner/work/integracion-continua-ventas/integracion-continua-ventas/ventas-backend/ventas/pom.xml
+        run: ls
       - name: Build with Maven  
         run: mvn --batch-mode --update-snapshots package
