--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,6 +14,6 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
       - name: Find Maven
-        run: cd /ventas-backend/ventas
+        run: cd ventas-backend/ventas
       - name: Build with Maven  
         run: mvn --batch-mode --update-snapshots package
